themes/haSepharadi/scss/partials/_custom.scss
/* ----------------------------------------------------
[_custom.scss]

1. Topbar & Header
   - 1.1 Topbar
   - 1.2 Search Form
   - 1.3 Site Header
   - 1.4 Menu Items - Unclickable
2. Breadcrumbs
3. Widgets
   - 3.1 Author Avatars - Voices
   - 3.2 Tribe Events
   - 3.3 Zemannim
4. Posts
   - 4.1 Site Layout
   - 4.2 Posts Layout
   - 4.3 Author Bios
5. Archive Pages
   - 5.1 Affiliate Links
6. BackToTop Button

------------------------------------------------------*/


/* 1. Top Bar & Header
=================================================*/

/* 1.1 Topbar
============================*/

/// @name Topbar Test
.topbar {
  background: $white;
  border-bottom: $border-width $border-style $border-color;
  box-sizing: content-box;
  font-size: 13px;
  height: 50px;
  line-height: 50px;
  overflow: hidden;
  position: static;
  width: 100%;
  z-index: 200;

  a:active,
  a:hover,
  a:focus {
  }

  &.shrinked {
    border-bottom: $border-width $border-style $border-color;
    box-shadow: 0 1px 2px $lightest-grey-2;
    height: 63px;
    min-height: inherit;
    overflow: visible;
    padding-bottom: 0;
    position: fixed;
    width: 100%;
    z-index: 200;

    .social-icons {
      display: none;
    }
  }

  .social-icons {
    float: left;
    // margin: 0 0 0 21px;
    margin: -1.5px 0 0 21px;
    max-width: 500px;

    a {
      color: $black;
      // font-size: 12.5;
      font-size: 11.5px;
      margin-right: 9px;

      &:hover {
        color: $dark-grey;
      }

      &.instagram {
        font-size: 15.4px;
        font-weight: bold;
      }
    }

    i.fab.fa-instagram {
      color: $black;
    }
  }

  .tools {
    float: right;
    margin: 0 20px 0 0;
    max-width: 220px;
  }
}

.topbar-fix {
  top: 0;
}

form#top-search {
  position: absolute;
  right: 0;
  z-index: 200;
}

input,
select,
textarea {
  font-size: 13px;
}

input[type='email'],
input[type='number'],
input[type='search'],
input[type='text'],
input[type='tel'],
input[type='url'],
input[type='password'],
textarea,
select {
  background-color: $white;
  border-color: $mid-grey-2;
  border-radius: 4px;
  border: $border-width $border-style $input--border-color;
  box-shadow: none;
  box-sizing: border-box;
  height: 38px;
  padding: 6px 10px;
}

button.search-button {
  background-color: transparent;
  border: 0;
  color: $black;
  display: inline-block;
  font-size: inherit;
  height: 27px;
  left: -30px;
  line-height: 1;
  overflow: hidden;
  padding: 0;
  position: relative;
  width: 27px;

  &::before {
    bottom: 14px;
    content: '\f002';
    font-family: fontAwesome;
    font-size: 14px;
    left: 6px;
    position: static;
  }
}

input.search-text {
  border-radius: 5% !important;
  display: inline-block;
  height: 25px !important;
  line-height: 1;
  width: 125px;
}

/* 1.2 Search Form
============================*/

.search-shrinked {
  display: none;
}

/* 1.3 Site Header
============================*/

.site-header {
  background: $white;
  height: auto;
  margin: 0 auto;
  max-height: 200px;
  min-height: 120px;
  padding: 10px 0 0;
  position: relative;
  transition: all .3s linear;
  width: 100%;
  z-index: 200;

  .header-shrinked {
    background: transparent;
    height: auto;
    left: 0;
    margin: 0 auto 50px;
    z-index: 400;
  }

}

.logo {
  height: 126px;
  margin: -50px auto 20px;
  text-align: center;
  width: 50%;

  a {
    color: $black;
    font: bold 6.4rem 'Voltaire', sans-serif;
    height: 80px;
    margin: -50px auto 0;
    max-width: 900px;
    min-width: 300px;
    overflow: hidden;
    text-decoration: none;
    text-transform: uppercase;
    width: auto;

    span {
      background: $white;
      padding: 0 30px;

      img {
        height: 80px;
      }
    }
  }

  .local-info {
    font-family: 'Roboto Slab', sans-serif;
    // font-family: sans-serif;
    height: 30px;
    // margin: auto;
    margin: 9px auto 0;
    max-width: 350px;
    min-width: 300px;
    text-align: center;
  }

  .local-date {
    font-size: 12px;
  }
}


.header-shrinked {

  .logo {
    height: 50px;
    left: 40px;
    margin: 0;
    position: fixed;
    width: 108px;

    a {
      height: 50px;
      line-height: 1;
      overflow: hidden;
      position: relative;
      top: -20px;

      span {
        background: transparent;
        height: 40px;
        padding: 0;

        img {
          height: 40px;
          position: relative;
          top: 20px;
        }
      }
    }
  }

  img.custom-logo {
    height: 50px;
    width: auto;
  }
}

.clearfix,
.row {
  &::before,
  &::after {
    content: '\0020';
    display: block;
    overflow: hidden;
    visibility: hidden;
    width: 0;
    height: 0;
  }
}

.wp-custom-logo .title-area {
  max-width: 216px;
}

.wp-custom-logo .site-container .title-area {
  max-width: initial;
  min-width: 216px;
  width: 216px;
}

img.custom-logo {
  top: -44px;
}

.date-shrinked {
  display: none;
}

/* 1.4 Menu Items - Unclickable
============================*/

.unclickable > a:hover {
  cursor: default;
}

/* 2. Breadcrumbs
=================================================*/

.bc-container {
  border-bottom: 1px solid $light-grey;
  display: flex;
  justify-content: space-between;
  margin: 0 0 40px;

  .social-buttons.share {
    flex-basis: 30%;
  }
}

.breadcrumbs {
  border: 0;
  color: $mid-grey-2;
  flex-basis: 70%;
  float: none;
  font-size: 1.3rem;
  margin: 0;
  overflow: hidden;

  a {
    color: $orange;
  }

  .navi {
    float: left;
    margin: 5px 0 15px;

    i {
      color: $black;
      margin-right: 4px;
    }
  }

  .sep {
    color: $mid-grey-4;
    margin: 0 10px;
  }

  .current {
    color: $mid-grey-2;
  }
}


/* 3. Widgets
=================================================*/

/* 3.1 Author Avatars - Voices
============================*/

.sidebar .widget-title a {
  color: $black;
}

.widget-wrap .author-avatars {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0 auto;
  width: 100%;

}

.widget-wrap .author-box {
  box-sizing: content-box;
  height: auto;
  margin: 0;
  width: 93px;

  a {
    color: $black;
    display: inline-block;
    width: 93px;

    &:hover {
      color: $orange;
    }
  }

  .avatar-box {
    height: 100px;
    margin: 0 0 1px;
    overflow: hidden;
    width: 95px;

    .avatar {
      border-radius: 0;
      float: none;
      height: auto;
      margin: 0;
      max-width: initial;
      width: 95px;
    }
  }

  .author-name {
    font: $font-weight--regular-1 13px 'times new roman', times, serif;
    line-height: 1.1875;
    margin: 7px auto 10px;
    text-align: center;
  }
}

/* Custom - Media Query: max-width: 870px */
@media only screen and (max-width: 54.375em) {
  section#text-18 {
    margin: 0 0 10px;
  }
}

/* 3.2 Tribe Events Widget
============================*/
.tribe-events-widget-link {
  color: $orange;
  // padding: 0 0 0 20px;
  text-align: center;

  &:visited {
    color: $orange;
  }
}

.tribe-events-list-widget-events {
  .tribe-event-title {
    margin: 0 !important;

    a,
    a:visited {
      color: $mid-grey-1;
    }

    a:hover {
      color: $orange;
    }
  }
}

.tribe-list-widget {
  .tribe-events-list-widget-events {
    margin: 0 0 1.25rem;
    padding: 0 1.5rem;
  }

  &.ol > li {
    list-style-type: none;
  }
}

/* 3.3 Zemannim Widget
============================*/
.widgettitle.widget-title.shabbat-title {
  margin: 20px 0 !important;
}

.zemannim-text {
  padding: 0 16px;
}

/* 4. Posts
=================================================*/

/* 4.1 Site Layout
============================*/

.content {
  float: left;
  margin: 0 10px;
  width: 880px;
}

.sidebar-content .content {
  float: right;
}

.full-width-content .content,
.landing-page .content {
  float: none;
  margin-left: auto;
  margin-right: auto;
}

.site-inner {
  margin: 0 auto;
  max-width: 1200px;
  // padding: 10px 0 0;
  padding: 30px 0 0;
}

/* 4.2 Posts Layout
============================*/

.post {
  border-bottom: $border-width $border-style $border-color;
  margin: 0 0 50px;
  padding: 0 0 20px;

  .thumbnail {
    height: auto;
    margin-bottom: 20px;
    max-height: 500px;
    overflow: hidden;
    position: relative;
    width: 100%;

    img,
    iframe {
      width: 100%;
      height: auto;
    }
  }

  .entry-tools a.morelink {
    float: right;
    margin-right: 0;
  }
}

.single .post .thumbnail {
  margin: 0 0 24px;
}

span.category {
  color: $mid-grey-2;
  display: block;
  font: $font-weight--regular-1 13px $base-font;
  line-height: 1.8em;
  margin: 20px auto -15px;
  text-align: center;
  width: 100%;
}

.title-divider {
  border-top: 2px dotted;
  display: block;
  margin: 0 auto 15px;
  max-width: 90px;
}

.entry-tools span,
.post .entry-tools a {
  color: $mid-grey-3;
  font-style: italic;
  margin-right: 20px;
}

.entry-title {
  line-height: 1.24;
  margin-top: 20px;
  text-align: center;
  text-transform: capitalize;
}

.entry-tools {
  font-size: 12px;
  margin: 10px auto 0;
}

/* 4.3 Author Bios
============================*/

.author-box {
  .avatar {
    height: 80px;
    width: 80px;
  }

  .author-name {
    color: $black;
    display: block;
    font: $font-weight--bold 18px $base-font;
    line-height: 1.111111;
    margin: 0 0 10px;
  }
}

.author-description {
  color: $mid-grey-1;
  font-size: 13px;
  font-weight: 300;
  line-height: 1.625;
  margin: 0 0 10px;
  margin-block-end: 10px;
}


/* 5. Archive Pages
=================================================*/

/* 5.1 Affiliate Links
============================*/

.affiliates-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.affiliate-item {
  align-items: center;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  margin: 0 0 6px;
}

.affiliate-link-text {
  font-size: 16px;
  line-height: 2;
}

.affiliate-img {
  margin: 0 0 4px;
}

/* 6. BackToTop Button
============================*/

#backToTop {
  background: $black;
  bottom: 30px;
  color: $white;
  display: none;
  float: right;
  font-size: 13px;
  height: auto;
  line-height: 1.8;
  padding: 5px 10px;
  position: fixed;
  right: 30px;
  width: auto;
  z-index: 100;
}

#backToTop.btt-shrinked {
  display: block;
}

